# Cosmos-Coin-Flip

./: .gitignore  Cargo.toml  LICENSE.md
contracts/coin-flip/: Cargo.toml
contracts/coin-flip/schema/: coin-flip.json
contracts/coin-flip/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  sudo.rs  types.rs
contracts/coin-flip/src/testing/: mod.rs  test_contract.rs  test_distribute.rs  test_queries.rs
contracts/coin-flip/src/testing/utils/: executes.rs  helpers.rs  mod.rs  queries.rs  setup.rs
devtools/: do_flip.sh  init.sh  migrate.sh  upload.sh
