[package]
name    = "coin-flip"
authors = ["Art3miX"]

edition    = { workspace = true }
version    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
homepage   = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
cw2              = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
sha256           = "1.1.1"
anyhow           = { workspace = true }
sg721            = { workspace = true }
sg721-base       = { workspace = true }
sg-std           = { workspace = true }
cw721            = { workspace = true }
cw721-base       = { workspace = true }
getrandom        = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
sg-multi-test = { workspace = true }
